--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-node_modules/
-.env
 __pycache__/
 venv/
 dist/
+.vscode/
+
+# dependencies
+node_modules/
+
+# production
+dist/
+
+# env files
+.env
+.env.*
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# editor / OS
+.DS_Store
